0024843: CLang warnings -Wconstant-logical-operand

Logical expression is corrected to take into account input argument